batch previews segfault on some materials #51734

Closed
opened 2017-06-07 16:20:16 +02:00 by matali23 · 17 comments

System Information
Windows 7 x64

Blender Version
Broken: 58a434b

Short description of error
when using file -> data previews -> batch-generate previews, it sometime crashes on some materials.

Exact steps for others to reproduce the error
File is from Blendermarket and is copyrighted, but I can provide the problematic bits per mail.

**System Information** Windows 7 x64 **Blender Version** Broken: 58a434b **Short description of error** when using file -> data previews -> batch-generate previews, it sometime crashes on some materials. **Exact steps for others to reproduce the error** File is from Blendermarket and is copyrighted, but I can provide the problematic bits per mail.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @matali23

Added subscriber: @matali23

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Please re-create the issue in a simple file that you can share. The simple the file the better. Append the problematic material in a blend new file, simplify it, change it, ...

Please re-create the issue in a simple file that you can share. The simple the file the better. Append the problematic material in a blend new file, simplify it, change it, ...
Author

the file is simple, it's a cube with one material. But it's copyrighted. That's the only problem.

the file is simple, it's a cube with one material. But it's copyrighted. That's the only problem.

Added subscriber: @fablefox

Added subscriber: @fablefox

does crash log generated? please upload if it does
https://docs.blender.org/manual/en/dev/troubleshooting/crash.html

does crash log generated? please upload if it does https://docs.blender.org/manual/en/dev/troubleshooting/crash.html
Author

it only writes segmentation fault in the command line. Other lines are startup messages with found python bundled.

it only writes segmentation fault in the command line. Other lines are startup messages with found python bundled.

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Sorry but, claims that you cannot share because of copyright is not acceptable as excuse. As mentioned before you can just spend time on anonymizing the file (remove textures, remove parts of material that makes it recognizable). Or post the file here with the additional statement "File only can be used for debugging and fixing blender".

If you still think the Blender Market maker wouldn't like you to share it at any cost, contact her/him directly and explain the situation. Otherwise there is nothing we can do.

Worthy noting that this is a free service, by volunteers and supported by the Development Fund. More often than not the bug reporter is expected to invest some time on it as well.

Sorry but, claims that you cannot share because of copyright is not acceptable as excuse. As mentioned before you can just spend time on anonymizing the file (remove textures, remove parts of material that makes it recognizable). Or post the file here with the additional statement "File only can be used for debugging and fixing blender". If you still think the Blender Market maker wouldn't like you to share it at any cost, contact her/him directly and explain the situation. Otherwise there is nothing we can do. Worthy noting that this is a free service, by volunteers and supported by the Development Fund. More often than not the bug reporter is expected to invest some time on it as well.

Added subscriber: @bliblubli

Added subscriber: @bliblubli

I also have some Blendermarket materials, so I had a look as it may have come from cycles. It comes from the cgc_oak material. But what is impressive is although I spend a lot of time to bisect, only retaining a glossy shader and the material output is enough to reproduce the crash. Of course, neither the full nor the simplified material crash on normal rendering with cycles. So I think the problem doesn't come from cycles.
Here it is, a cube with 1 shader creating a seg fault:
test previews22.blend

I also have some Blendermarket materials, so I had a look as it may have come from cycles. It comes from the cgc_oak material. But what is impressive is although I spend a lot of time to bisect, only retaining a glossy shader and the material output is enough to reproduce the crash. Of course, neither the full nor the simplified material crash on normal rendering with cycles. So I think the problem doesn't come from cycles. Here it is, a cube with 1 shader creating a seg fault: [test previews22.blend](https://archive.blender.org/developer/F628536/test_previews22.blend)
Sergey Sharybin was assigned by Dalai Felinto 2017-06-13 12:28:42 +02:00

Confirmed, crash log: P498

Confirmed, crash log: [P498](https://archive.blender.org/developer/P498.txt)
Author

thanks bliblubli, I never would have thought that a glossy shader alone could create the crash.

thanks bliblubli, I never would have thought that a glossy shader alone could create the crash.

This issue was referenced by 0c122d64d2

This issue was referenced by 0c122d64d2acffd3a5cd5a898e3b7791c5c66878

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

thanks for the fix

thanks for the fix
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51734
No description provided.