Fix T51734: batch-generate previews crashes on some materials.